# tauMNG-Integrated

./: .gitignore  CMakeLists.txt  build-index.sh  search-index.sh
include/efanna2e/: distance.h  index_taumng.h  neighbor.h
src/: index.cpp  index_taumng.cpp  readme.txt
tests/: CMakeLists.txt  test_taumng_index.cpp  test_taumng_search.cpp
